# libpealimrs

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs  prefix_tree.rs  proto.rs  util.rs  word_dto.rs  word_index.rs
src/proto/: build.rs  word_data.proto  worddata.rs
