[package]
name = "libpealimrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm-support = ["wasm-bindgen"]

[dependencies]
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
unicode-normalization = "0.1.23"
unicode-segmentation = "1.11.0"
wasm-bindgen =  { version = "0.2.92", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
console_error_panic_hook = { version = "0.1.7", optional = true }
