[package]
name = "libpealimrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "protoc"
path = "src/proto/build.rs"

[features]
wasm-support = [
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "js-sys",
    "futures",
    "serde-wasm-bindgen"
]

[dependencies]
prost = "0.12.4"
prost-build = "0.12.4"
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
unicode-normalization = "0.1.23"
unicode-segmentation = "1.11.0"
wasm-bindgen =  { version = "0.2.94", optional = true }
wasm-bindgen-futures = { version = "0.4.42", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
lazy_static = "1.4.0"
regex = "1.10.4"
js-sys = { version = "0.3.69", optional = true }
futures = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen =  { version = "0.2.92", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
